// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSuperSelect props compressed 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-block-EuiInputPopover"
>
  <input
    type="hidden"
    value=""
  />
  <div
    class="euiFormControlLayout euiFormControlLayout--compressed"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <button
        aria-haspopup="listbox"
        class="euiSuperSelectControl euiFormControlLayout--1icons euiSuperSelectControl--compressed"
        type="button"
      />
      <div
        class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right euiFormControlLayoutIcons--absolute"
      >
        <span
          class="euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="arrowDown"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuperSelect props fullWidth 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-block-EuiInputPopover"
>
  <input
    type="hidden"
    value=""
  />
  <div
    class="euiFormControlLayout euiFormControlLayout--fullWidth"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <button
        aria-haspopup="listbox"
        class="euiSuperSelectControl euiFormControlLayout--1icons euiSuperSelectControl--fullWidth"
        type="button"
      />
      <div
        class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right euiFormControlLayoutIcons--absolute"
      >
        <span
          class="euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="arrowDown"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuperSelect props prepend and append 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-block-EuiInputPopover"
>
  <input
    type="hidden"
    value=""
  />
  <div
    class="euiFormControlLayout euiFormControlLayout--group"
  >
    <label
      class="euiFormLabel euiFormControlLayout__prepend"
    >
      prepend
    </label>
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <button
        aria-haspopup="listbox"
        class="euiSuperSelectControl euiFormControlLayout--1icons euiSuperSelectControl--inGroup"
        type="button"
      />
      <div
        class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right euiFormControlLayoutIcons--absolute"
      >
        <span
          class="euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="arrowDown"
          />
        </span>
      </div>
    </div>
    <label
      class="euiFormLabel euiFormControlLayout__append"
    >
      append
    </label>
  </div>
</div>
`;

exports[`EuiSuperSelect renders 1`] = `
<body>
  <div>
    <div
      class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-block-EuiInputPopover"
    >
      <input
        type="hidden"
        value=""
      />
      <div
        class="euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <button
            aria-haspopup="listbox"
            aria-label="aria-label"
            class="euiSuperSelectControl euiFormControlLayout--1icons euiSuperSelect--isOpen__button testClass1 testClass2 emotion-euiTestCss"
            data-test-subj="test subject string"
            type="button"
          />
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right euiFormControlLayoutIcons--absolute"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-euiportal="true"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-live="assertive"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPopover__panel emotion-euiPanel-grow-m-plain-euiPopover__panel-light-isAttached-bottom"
        data-popover-panel="true"
        role="dialog"
        style="top: 0px; left: -22px; will-change: transform, opacity; z-index: 2000; inline-size: 0px;"
      >
        <div>
          <div
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="0"
          />
          <div
            data-focus-lock-disabled="false"
          >
            <p
              class="emotion-euiScreenReaderOnly"
              id="euiSuperSelect__generated-id__screenreaderDescribeId"
            >
              You are in a form selector and must select a single option. Use the Up and Down arrow keys to navigate or Escape to close.
            </p>
            <div
              aria-describedby="euiSuperSelect__generated-id__screenreaderDescribeId"
              aria-label="Select listbox"
              class="euiSuperSelect__listbox"
              role="listbox"
              tabindex="0"
            >
              <button
                aria-selected="false"
                class="euiContextMenuItem euiSuperSelect__item emotion-euiContextMenuItem-m-center"
                id="1"
                role="option"
                type="button"
              >
                <span
                  class="euiContextMenu__icon emotion-euiContextMenu__icon"
                  color="inherit"
                  data-euiicon-type="empty"
                />
                <span
                  class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
                >
                  Option #1
                </span>
              </button>
              <button
                aria-selected="false"
                class="euiContextMenuItem euiSuperSelect__item emotion-euiContextMenuItem-m-center"
                id="2"
                role="option"
                type="button"
              >
                <span
                  class="euiContextMenu__icon emotion-euiContextMenu__icon"
                  color="inherit"
                  data-euiicon-type="empty"
                />
                <span
                  class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
                >
                  Option #2
                </span>
              </button>
            </div>
          </div>
          <div
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</body>
`;
